--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ kiwisolver==1.3.1
 matplotlib==3.4.2
 numpy==1.21.1
 pandas==1.3.1
+patsy==0.5.1
 Pillow==8.3.1
 pyparsing==2.4.7
 python-dateutil==2.8.2
@@ -11,4 +12,5 @@ pytz==2021.1
 scikit-learn==0.24.2
 scipy==1.7.0
 six==1.16.0
+statsmodels==0.12.2
 threadpoolctl==2.2.0
