--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ python-dateutil==2.8.2
 pytz==2021.1
 scikit-learn==0.24.2
 scipy==1.7.0
+seaborn==0.11.1
 six==1.16.0
 statsmodels==0.12.2
 threadpoolctl==2.2.0
