--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ cycler==0.10.0
 joblib==1.0.1
 kiwisolver==1.3.1
 matplotlib==3.4.2
-numpy==1.21.1
+numpy~=1.19.5
 pandas==1.3.1
 patsy==0.5.1
 Pillow==8.3.1
@@ -15,3 +15,11 @@ seaborn==0.11.1
 six==1.16.0
 statsmodels==0.12.2
 threadpoolctl==2.2.0
+
+pip~=20.3.4
+wheel~=0.34.2
+cryptography~=3.4.6
+keyring~=22.2.0
+setuptools~=52.0.0
+future~=0.18.2
+yellowbrick~=1.3.post1
