--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-#venv
-regenv/
+
 
 # Visual Studio Code #
 .vscode/*
@@ -29,7 +28,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-
+regvenv/
 
 ../simple_linear_reg.py
 ../reg_dataset.py
